Refine patterns and add tests